# chat_evidence_tool_web

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish-ghcr.yml  docker_build.yml
backend/: core_workers.py  download_models.py  main.py  models.py  requirements.txt
frontend/: index.html  script.js  style.css
