[project]
name = "chat-evidence-tool-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.0",
    "setuptools>=80.3.1",
    "uvicorn[standard]>=0.34.2",
]
